--- a/image.html
+++ b/image.html
@@ -12,7 +12,7 @@
 			<h1>Gulagle Images</h1>
 			<form action="https://google.com/search">
 				<input type="text" name="q"><p>
-				<input type="submit" value="Search the Gulag Images">
+				<input type="submit" value="Search the Gulag Images" id="image_button">
 				<input type="hidden" name="tbm" value="isch">
 			</form>
 		</div>
